# digital-ink-library-rust

./: Cargo.toml  README.md
src/: boundingbox.rs  lib.rs  sketch.rs  stroke.rs
src/serialization/: json_serializer.rs  mod.rs
