[package]
description = "library for digital ink (strokes, sketches etc.)"
name = "digital-ink-library"
version = "1.4.0"
authors = ["Alexander Prange <alexander.prange@dfki.de>"]
edition = "2018"
homepage = "https://github.com/DFKI-Interactive-Machine-Learning/digital-ink-library-rust"
repository = "https://github.com/DFKI-Interactive-Machine-Learning/digital-ink-library-rust"
license-file = "LICENSE"
readme = "README.md"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tempfile = "3"